# qtwin

./: .gitignore  229480308-ght-work6.pro  229480308-ght-work6_en.qm  229480308-ght-work6_en.ts  229480308-ght-work6_zh_CN.qm  229480308-ght-work6_zh_CN.ts  CMakeLists.txt  fire.cpp  fire.h  fire.ui  ght.cpp  ght.h  ghtmp4.cpp  ghtmp4.h  ghttimer.cpp  ghttimer.h  ghttimer.ui  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  photo.qrc  photoshop.cpp  photoshop.h  photoshop.ui  vedio.qrc  voice.qrc
